--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,120 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Get up and running with Cardinal in minutes.
+
+We’ll show you how with Python and cURL!"
 ---
 
 ## Get started in three steps
 
 Get your documentation site running locally and make your first customization.
 
-### Step 1: Set up your local environment
+### Method 1: Python (Recommended)
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+Install dependencies:
 
-### Step 2: Deploy your changes
+```
+pip install requests
+```
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+Process a document:
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+```
+import requests
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+url = "https://async-cardinal-api-382401401043.us-central1.run.app/process"
 
-### Step 3: Go live
+headers = {
+    "x-api-key": "YOUR_API_KEY_HERE"
+}
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+files = {
+    "file": open("sample.pdf", "rb")  # Or use 'fileUrl' instead
+}
 
-## Next steps
+data = {
+    "post_processing_on": "false",
+    "start_page": "1"
+}
 
-Now that you have your docs running, explore these key features:
+response = requests.post(url, headers=headers, files=files, data=data)
 
-<CardGroup cols={2}>
+print(response.json())
+```
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+✅ You’ve just processed your first document\!\
+The Markdown text will be available in the `"pages" → "content"` fields of the response.
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
+## Method 2: cURL
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
+If you prefer the command line:
 
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
+```
+curl --location 'https://async-cardinal-api-382401401043.us-central1.run.app/process' \
+--header 'x-api-key: YOUR_API_KEY_HERE' \
+--form 'file=@"/path/to/your/document.pdf"' \
+--form 'post_processing_on=false' \
+--form 'start_page=1'
+```
 
-</CardGroup>
+## Request Parameters
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+- **file** _(required if no _`fileUrl`_)_: PDF or image file to process
+- **fileUrl** _(required if no _`file`_)_: Publicly accessible URL to file
+- **post_processing_on** _(optional, default: true)_: Clean up text output
+- **start_page** _(optional, default: 1)_: Start processing from this page
+- **ephemeral** _(optional, default: false)_: If `true`, results are not stored
+
+## Sample Response
+
+```
+{
+  "success": true,
+  "total_pages": 2,
+  "successful_pages": 2,
+  "failed_pages": 0,
+  "pages": [
+    {
+      "content": "ACME CORPORATION\nInvoice #INV-2024-001\n\nBill To:\nJohn Doe Industries...",
+      "height": 792.0,
+      "width": 612.0,
+      "barcodes": [
+        {
+          "type": "CODE_128",
+          "value": "ABC123456789",
+          "bounding_box": { "x": 450, "y": 50, "width": 120, "height": 25 }
+        }
+      ],
+      "signatures": [
+        {
+          "type": "handwritten",
+          "confidence": 0.89,
+          "bounding_box": { "x": 400, "y": 650, "width": 180, "height": 40 }
+        }
+      ],
+      "image_metadata": [
+        {
+          "image_id": "img_001",
+          "format": "PNG",
+          "size": { "width": 200, "height": 150 },
+          "position": { "x": 100, "y": 200 },
+          "caption": "Fig. 3: Prompt Template.",
+          "cropped_image_url": "https://example-s3/img_001.png"
+        }
+      ]
+    },
+    {
+      "content": "TERMS AND CONDITIONS\n\n1. Payment is due within 30 days...",
+      "height": 792.0,
+      "width": 612.0,
+      "image_metadata": []
+    }
+  ]
+}
+```
+
+## Next Steps
+
+- Experiment with `post_processing_on`, `ephemeral`, and page ranges
+- Parse structured elements like **barcodes**, **signatures**, and **images**
+- Build end-to-end pipelines that transform PDFs into Markdown knowledge bases
