add process endpoint

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,7 +1,9 @@
 ---
-title: API Reference Introduction
+title: "API Reference Introduction"
+description: "Overview of the Cardinal API."
 ---
 
-<Note>
-   Under construction...
-</Note>
+Welcome to the **Cardinal API** reference.  
+This section provides an overview of the API, including available endpoints, request/response formats, and authentication details.  
+
+Use this reference as your primary resource for integrating document processing into your applications.
