--- a/enterprise/security/compliance.mdx
+++ b/enterprise/security/compliance.mdx
@@ -13,7 +13,7 @@ We are actively undergoing audits and maintaining certifications that matter to 
 
 - **SOC 2 Type II** → Undergoing full audit and observation period  
 - **HIPAA** → Compliance in place for handling sensitive healthcare data  
-- **Penetration Test** → Completed by independent security experts  
+- **Penetration Test** → Completed by Oneleet  
 
 You can view all reports and documentation here:  
 **https://trust.delve.co/leafpress**
