update all of our docs

--- a/file-types.mdx
+++ b/file-types.mdx
@@ -10,6 +10,8 @@ The following document types are currently accepted by the extract endpoints as 
 - **.png** — Portable Network Graphics  
 - **.jpg / .jpeg** — Joint Photographic Experts Group  
 
+> 💡 While Cardinal does not natively support **Excel (.xls / .xlsx)** or **CSV (.csv)** files, you can convert them to PDF on your own and process them through Cardinal.
+
 ---
 
 ### Coming Soon
