--- a/index.mdx
+++ b/index.mdx
@@ -1,12 +1,86 @@
 ---
-title: "Overview"
-description: "Welcome to Cardinal documentation!"
+title: "Introduction"
+description: "Cardinal is a high-performance OCR and document intelligence platform designed for developers."
 ---
 
-### Get started quickly 
+> Cardinal transforms messy PDFs, images, and scanned files into structured, reliable data you can use immediately. From JSON extraction to RAG pipelines, Cardinal gives you the building blocks to automate document processing without constraints.  
 
-<Card title="API Quickstart" icon="rocket" horizontal={false} href="/quickstart">
-  Follow our three step quickstart guide.
+<Tip>
+**The next generation of Cardinal**  
+
+- **Schema-first JSON Extraction** – Provide your schema, and Cardinal maps data into it automatically.
+- **Rich Tables & Annotations** – Accurately capture spanning tables, checkmarks, barcodes, signatures, and image metadata — all built in, no hacks required.  
+- **Flexible Output Modes** – Get high fidelity Markdown. Add bounding boxes to power downstream RAG and human review.  
+</Tip>
+
+<Note>
+Looking to try Cardinal? Visit [trycardinal.ai](http://trycardinal.ai)!
+</Note>
+
+---
+
+### Get started quickly
+
+<CardGroup cols={3}>
+  <Card title="Quickstart" icon="check" href="/quickstart">
+    Upload your first PDF or image and extract structured JSON in minutes.
+  </Card>
+
+  <Card title="Learn the Basics" icon="file" href="/file-types">
+    Explore accepted file types, authentication, and response formats.
+  </Card>
+
+  <Card title="Examples & Recipes" icon="books" href="/resources/examples">
+    Browse example schemas, enrichment prompts, and RAG integrations.
+  </Card>
+</CardGroup>
+
+---
+
+### Develop with Cardinal
+
+<CardGroup cols={3}>
+  <Card title="API Reference" icon="code" href="/api/overview">
+    Explore, implement, and scale with Cardinal’s API.
+  </Card>
+
+  <Card title="Playground" icon="laptop" href="/playground">
+    Experiment with schemas, Markdown vs. HTML, and annotation toggles.
+  </Card>
+
+  <Card title="CLI & SDKs" icon="terminal" href="/sdks">
+    Build faster with SDKs and a simple CLI for bulk or scripted runs.
+  </Card>
+</CardGroup>
+
+---
+
+### Key capabilities
+
+<CardGroup cols={2}>
+  <Card title="Structured JSON Extraction" icon="brackets-curly" href="/json">
+    Extract JSON aligned to your schema. Handle arrays, long PDFs, and null fallbacks gracefully.
+  </Card>
+
+<Card title="High Fidelity Markdown" icon="image" href="/markdown">
+  Complex table handling, annotations, and links — with bounding boxes and image embeds preserved.
 </Card>
+</CardGroup>
 
-If you need any help, please reach out to team@trycardinal.ai.
+---
+
+### Support
+
+<CardGroup cols={2}>
+  <Card title="Help Center" icon="circle-question" href="/support">
+    Find answers to common setup and billing questions.
+  </Card>
+
+  <Card title="Service Status" icon="chart-line" href="/status">
+    Check the current status of Cardinal services.
+  </Card>
+</CardGroup>
+
+---
+
+If you need any help, reach out to **team@trycardinal.ai**.
