--- a/index.mdx
+++ b/index.mdx
@@ -44,13 +44,10 @@ Looking to try Cardinal? Visit [trycardinal.ai](http://trycardinal.ai)!
     Explore, implement, and scale with Cardinal’s API.
   </Card>
 
-  <Card title="Playground" icon="laptop" href="/playground">
+  <Card title="Playground" icon="laptop" href="https://dashboard.trycardinal.ai" external>
     Experiment with schemas, Markdown vs. HTML, and annotation toggles.
   </Card>
 
-  <Card title="CLI & SDKs" icon="terminal" href="/sdks">
-    Build faster with SDKs and a simple CLI for bulk or scripted runs.
-  </Card>
 </CardGroup>
 
 ---
