make all the links make sense

--- a/index.mdx
+++ b/index.mdx
@@ -40,7 +40,7 @@ Looking to try Cardinal? Visit [trycardinal.ai](http://trycardinal.ai)!
 ### Develop with Cardinal
 
 <CardGroup cols={3}>
-  <Card title="API Reference" icon="code" href="/api/overview">
+  <Card title="API Reference" icon="code" href="/api-reference/introduction">
     Explore, implement, and scale with Cardinal’s API.
   </Card>
 
@@ -69,11 +69,11 @@ Looking to try Cardinal? Visit [trycardinal.ai](http://trycardinal.ai)!
 ### Support
 
 <CardGroup cols={2}>
-  <Card title="Help Center" icon="circle-question" href="/support">
-    Find answers to common setup and billing questions.
+  <Card title="Email Support" icon="envelope" href="mailto:team@trycardinal.ai" external>
+    Contact us at team@trycardinal.ai for help with setup, billing, or technical questions.
   </Card>
 
-  <Card title="Service Status" icon="chart-line" href="/status">
+  <Card title="Service Status" icon="chart-line" href="/stability">
     Check the current status of Cardinal services.
   </Card>
 </CardGroup>
