--- a/faqs.mdx
+++ b/faqs.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Other FAQs"
+title: "FAQs"
 description: "Common questions about Cardinal’s architecture, features, and workflows."
 ---
 
