--- a/index.mdx
+++ b/index.mdx
@@ -1,83 +1,81 @@
 ---
 title: "Introduction"
-description: "Cardinal is a high-performance OCR and document intelligence platform designed for developers."
+description: "Complete guide to Cardinal's high-performance OCR and document intelligence platform"
 ---
 
-> Cardinal transforms messy PDFs, images, and scanned files into structured, reliable data you can use immediately. From JSON extraction to RAG pipelines, Cardinal gives you the building blocks to automate document processing without constraints.  
+Cardinal transforms messy PDFs, images, and scanned files into structured, reliable data you can use immediately. From JSON extraction to RAG pipelines, Cardinal gives you the building blocks to automate document processing without constraints.
 
-<Tip>
-**The next generation of Cardinal**  
+---
 
-- **Schema-first JSON Extraction** – Provide your schema, and Cardinal maps data into it automatically.
-- **Rich Tables & Annotations** – Accurately capture spanning tables, checkmarks, barcodes, signatures, and image metadata — all built in, no hacks required.  
-- **Flexible Output Modes** – Get high fidelity Markdown. Add bounding boxes to power downstream RAG and human review.  
-</Tip>
+## What's in these docs
+
+### Getting Started
+<CardGroup cols={2}>
+  <Card title="Quickstart" icon="rocket" href="/quickstart">
+    Upload your first PDF or image and extract structured JSON in minutes
+  </Card>
+  <Card title="File Types & Basics" icon="file" href="/file-types">
+    Accepted formats, authentication, response structures, and core concepts
+  </Card>
+</CardGroup>
+
+### Output Formats
+<CardGroup cols={2}>
+  <Card title="JSON Extraction" icon="brackets-curly" href="/json">
+    Schema-first extraction, arrays, long PDFs, null fallbacks, and data mapping
+  </Card>
+  <Card title="Markdown Output" icon="markdown" href="/markdown">
+    High-fidelity conversion with tables, annotations, bounding boxes, and image embeds
+  </Card>
+</CardGroup>
+
+### Development & Integration  
+<CardGroup cols={3}>
+  <Card title="API Reference" icon="code" href="/api-reference/introduction">
+    Complete API documentation, endpoints, parameters, and response formats
+  </Card>
+  <Card title="Examples & Recipes" icon="books" href="/resources/examples">
+    Sample schemas, enrichment prompts, RAG integrations, and use cases
+  </Card>
+  <Card title="Playground" icon="laptop" href="https://dashboard.trycardinal.ai" external>
+    Interactive testing environment for schemas and output formats
+  </Card>
+</CardGroup>
+
+### Key Features
+<CardGroup cols={2}>
+  <Card title="Rich Annotations" icon="pen-to-square" href="/annotations">
+    Checkmarks, barcodes, signatures, form fields, and metadata extraction
+  </Card>
+  <Card title="Table Processing" icon="table" href="/tables">
+    Complex spanning tables, multi-page tables, and structured data extraction
+  </Card>
+</CardGroup>
+
+### Resources & Support
+<CardGroup cols={3}>
+  <Card title="Service Status" icon="chart-line" href="/stability">
+    Real-time status and performance monitoring
+  </Card>
+  <Card title="Email Support" icon="envelope" href="mailto:team@trycardinal.ai" external>
+    Direct support for setup, billing, and technical questions
+  </Card>
+</CardGroup>
+
+---
+
+## Key Highlights
+
+**We offer**  
+- **Schema-first JSON Extraction** – Provide your schema, and Cardinal maps data into it automatically
+- **Rich Tables & Annotations** – Accurately capture spanning tables, checkmarks, barcodes, signatures, and image metadata
+- **Flexible Output Modes** – Get high fidelity Markdown with bounding boxes for RAG and human review
+
 
 <Note>
-Looking to try Cardinal? Visit [trycardinal.ai](http://trycardinal.ai)!
+Ready to get started? Visit [trycardinal.ai](http://trycardinal.ai) to try Cardinal now!
 </Note>
 
 ---
 
-### Get started quickly
-
-<CardGroup cols={3}>
-  <Card title="Quickstart" icon="check" href="/quickstart">
-    Upload your first PDF or image and extract structured JSON in minutes.
-  </Card>
-
-  <Card title="Learn the Basics" icon="file" href="/file-types">
-    Explore accepted file types, authentication, and response formats.
-  </Card>
-
-  <Card title="Examples & Recipes" icon="books" href="/resources/examples">
-    Browse example schemas, enrichment prompts, and RAG integrations.
-  </Card>
-</CardGroup>
-
----
-
-### Develop with Cardinal
-
-<CardGroup cols={3}>
-  <Card title="API Reference" icon="code" href="/api-reference/introduction">
-    Explore, implement, and scale with Cardinal’s API.
-  </Card>
-
-  <Card title="Playground" icon="laptop" href="https://dashboard.trycardinal.ai" external>
-    Experiment with schemas, Markdown vs. HTML, and annotation toggles.
-  </Card>
-
-</CardGroup>
-
----
-
-### Key capabilities
-
-<CardGroup cols={2}>
-  <Card title="Structured JSON Extraction" icon="brackets-curly" href="/json">
-    Extract JSON aligned to your schema. Handle arrays, long PDFs, and null fallbacks gracefully.
-  </Card>
-
-<Card title="High Fidelity Markdown" icon="image" href="/markdown">
-  Complex table handling, annotations, and links — with bounding boxes and image embeds preserved.
-</Card>
-</CardGroup>
-
----
-
-### Support
-
-<CardGroup cols={2}>
-  <Card title="Email Support" icon="envelope" href="mailto:team@trycardinal.ai" external>
-    Contact us at team@trycardinal.ai for help with setup, billing, or technical questions.
-  </Card>
-
-  <Card title="Service Status" icon="chart-line" href="/stability">
-    Check the current status of Cardinal services.
-  </Card>
-</CardGroup>
-
----
-
-If you need any help, reach out to **team@trycardinal.ai**.
+Need help? Contact us at **team@trycardinal.ai**
