--- a/output-response.mdx
+++ b/output-response.mdx
@@ -26,8 +26,10 @@ The baseline structure is consistent, but additional fields may appear depending
       "height": 792,
       "width": 612,
       "barcodes": [],
+      "bounding_boxes": [],
       "signatures": [],
-      "image_metadata": []
+      "image_metadata": [],
+      "processed_tables": []
     }
   ],
   "schema_result": {
