--- a/uptime.mdx
+++ b/uptime.mdx
@@ -1,15 +1,15 @@
 ---
-title: "Stability"
+title: "Uptime"
 description: "Track Cardinal’s reliability and uptime performance."
 ---
 
-### Stability Overview
+### Uptime Overview
 
 Cardinal is designed for enterprise-grade reliability. Our infrastructure is built on a distributed, autoscaling stack that ensures consistent performance even under heavy workloads.
 
 ---
 
-### Current Stability
+### Current Uptime
 
 - **Uptime:** ~99.9% so far  
 - **Reliability:** APIs and workers are fully monitored, with automatic retries and recovery for failed tasks  
