--- a/markdown.mdx
+++ b/markdown.mdx
@@ -27,6 +27,23 @@ All of these are preserved in the Markdown/HTML output.
 
 ---
 
+### Example Response 
+
+```json 
+{
+  "pages": [
+    {
+      "page": 1,
+      "width": 612,
+      "height": 792,
+      "content": "Acme Health Center\n<h1>INTAKE FORM</h1>\n<p>Name: Alex Johnson<br/>DOB: 01/23/1992<br/>Admit Date: 05/04/2025</p>\n<p>☑ Male ☐ Female ☐ Other</p>\n<p>Address: 123 Main Street, Springfield</p>\n<p>Phone: (555) 123-4567</p>\n<p>Emergency Contact: Jamie Johnson (spouse)</p>\n<p>Marital Status: ☐ Married ☑ Single</p>\n<p>Occupation: Software Engineer</p>\n<p>Primary Language: English</p>\n<p>Interpreter Needed: ☐ Yes ☑ No</p>\n<p>Allergies: None reported</p>\n<p>Insurance Provider: CardinalCare</p>\n<p>Policy #: 123456789</p>\n<table>\n<thead><tr><th>Medication</th><th>Dosage</th><th>Frequency</th></tr></thead>\n<tbody>\n<tr><td>Aspirin</td><td>81mg</td><td>Daily</td></tr>\n<tr><td>Metformin</td><td>500mg</td><td>Twice daily</td></tr>\n</tbody>\n</table>"
+    }
+  ]
+}
+``` 
+**Notes:**
+- Text, headers, and paragraphs are flattened into Markdown/HTML inside the `content` field.
+
 ## API Reference
 
 <Card title="Process File API" href="api-reference/endpoint/process" icon="code" />
