--- a/latency.mdx
+++ b/latency.mdx
@@ -5,35 +5,31 @@ description: "Understand Cardinal’s latency and performance characteristics."
 
 ### Latency Overview
 
-Cardinal is optimized for speed and scale, but actual latency depends on:  
-
-- **Page count** — more pages = more processing time.  
-- **Complexity** — dense tables, handwriting, and annotations take longer.  
-- **Features toggled** — enabling extra passes (e.g., handwriting, redlines, skew correction) increases latency.  
-- **System resources** — CPU throttling may occur on very large uploads.  
+Cardinal is optimized for speed and scale. Each page typically takes **around 30 seconds** to process, regardless of size or complexity. Because all pages are processed **in parallel with no rate limits**, total latency depends primarily on the slowest page rather than the total number of pages.
 
 ---
 
 ### Typical Latency
 
-| Document Size | Standard Docs | Dense Tables | Handwriting | Dense + Handwriting |
-|---------------|---------------|--------------|-------------|----------------------|
-| **1 page**    | 1–3 sec       | 2–4 sec      | 2–4 sec     | 3–5 sec              |
-| **10 pages**  | ~5–7 sec      | ~7–9 sec     | ~8–10 sec   | ~10–12 sec           |
-| **100 pages** | ~30 sec       | ~35 sec      | ~40 sec     | ~45 sec              |
+| Document Size | Expected Latency |
+|---------------|------------------|
+| **1 page**    | ~30 sec          |
+| **10 pages**  | ~30 sec          |
+| **100 pages** | ~30 sec          |
+| **1000 pages**| ~30 sec          |
 
 ---
 
 ### Notes
 
-- Latency scales **roughly linearly with page count**.  
-- Dense tables add ~10–20% overhead.  
-- Handwriting adds ~20–30% overhead.  
-- Enabling **all advanced passes** can increase latency by up to ~50%.  
-- **Skew correction** can be toggled off for speed, but sideways scans may not extract correctly.  
+- Pages run **fully in parallel**, so overall latency does **not** scale linearly with page count.  
+- Complex cases (dense tables, handwriting, annotations, advanced passes) may take closer to **40–50 seconds per page**, but still parallelize.  
+- **Post-processing and additional key features** (e.g., bounding boxes, enrichment, or schema alignment) typically add **~15–30 seconds** on top of base latency.  
+- There are **no rate limits** — you can process as many pages as you want simultaneously.  
+- Skew correction and other advanced passes may add a few seconds of processing time per page.  
 
 ---
 
 <Note>
-These are approximate numbers. For production workloads, we recommend running a few sample uploads to benchmark your own latency.
+These are approximate numbers. For production workloads, we recommend uploading a sample batch to benchmark your own latency.
 </Note>
