--- a/json.mdx
+++ b/json.mdx
@@ -5,7 +5,7 @@ description: "Extract structured JSON from documents using Cardinal."
 
 ## Overview
 
-Cardinal’s JSON mode lets you define the schema you want and receive structured data back. 
+Cardinal's JSON mode lets you define the schema you want and receive structured data back. 
 
 You provide the JSON shape, and Cardinal will attempt to align extracted values to it:
 
@@ -15,58 +15,19 @@ You provide the JSON shape, and Cardinal will attempt to align extracted values 
 
 ---
 
-## Modes of JSON Extraction
+## Methods of JSON Extraction
 
-We currently offer **two flavors of JSON extraction** depending on your use case:
+We currently offer **two methods of JSON extraction** depending on your use case:
 
 ### 1. Fast JSON — /extract (PDF only)
 
-Use **Fast JSON** when you need a quick, lightweight response.  
+Use **Fast JSON** when you need a quick, lightweight response with **lower cost and latency**.
 
-- Best for short docs or targeted checks (e.g., “is this image blurry?”)
-- Prioritizes speed over deep parsing
+- Best for short docs or targeted checks (e.g., "is this image blurry?")
+- Prioritizes speed and cost-efficiency over deep parsing
 - Input: PDF via upload or fileUrl
 - You must provide a schema
-
 ```json
 {
   "is_blurry": true
 }
-```
-
-### 2. Standard JSON — /process 
-
-**Standard JSON** runs our full parsing pipeline and aligns output to your schema.
-
-- Handles complex layouts (tables, annotations, etc.).
-- Slower, but more reliable for production workloads.
-- Input: PDF or image via upload or fileUrl
-- Provide schema to receive schema_result
-
-```json
-{
-  "invoice_number": "INV-00392",
-  "due_date": "2025-09-01",
-  "total_amount": 1042.50,
-  "line_items": [
-    {
-      "description": "Consulting",
-      "amount": 900.00
-    },
-    {
-      "description": "Tax",
-      "amount": 142.50
-    }
-  ]
-}
-``` 
-
-### Long Document Caveats
-Right now, **longer files may cause JSON extraction to break or truncate** (especially with large arrays).
-We’re actively adding functionality to improve stability for multi-page and dense PDFs.
-
-> 💡 If you hit issues with large files, you can paginate your PDF and run extraction page by page.
-
-### Coming Soon
-
-- Automatic chunking for long PDFs
