--- a/uptime.mdx
+++ b/uptime.mdx
@@ -11,11 +11,11 @@ Cardinal is designed for enterprise-grade reliability. Our infrastructure is bui
 
 ### Current Uptime
 
-- **Uptime:** ~99.9% so far  
+- **Uptime:** ~99.9%   
 - **Reliability:** APIs and workers are fully monitored, with automatic retries and recovery for failed tasks  
 - **Scalability:** autoscaling ensures large spikes in traffic are handled without downtime  
 
-You can track live uptime and incidents on our [Status Page](https://status.trycardinal.ai).  
+You can track live uptime and incidents on our [Status Page](http://status.trycardinal.ai/)).  
 
 ---
 
